--- a/Vagrantfile.erb
+++ b/Vagrantfile.erb
@@ -34,9 +34,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # client_patch_version = 1
   # client_full_version = client_major_version.to_s + "." + client_minor_version.to_s + "." + client_patch_version.to_s
 
-  config.vm.provision(:shell, path: 'env_deps.sh', args: "#{riak_full_version}")
+  config.vm.provision(:shell, path: 'env_deps.sh', args: "#{riakversion}")
   config.vm.provision(:unix_reboot)
-  config.vm.provision(:shell, path: 'build_erl.sh', args: "#{erlang_version}", privileged: false)
-  config.vm.provision(:shell, path: 'inst_erl.sh', args: "#{erlang_version}")
-  config.vm.provision(:shell, path: 'riak.sh', args: "#{riak_simple_version} #{riak_full_version} #{numnodes.to_s} #{client_full_version}", privileged: false)
+  # config.vm.provision(:shell, path: 'build_erl.sh', args: "#{erlang_version}", privileged: false)
+  # config.vm.provision(:shell, path: 'inst_erl.sh', args: "#{erlang_version}")
+  # config.vm.provision(:shell, path: 'riak.sh', args: "#{riak_simple_version} #{riak_full_version} #{numnodes.to_s} #{client_full_version}", privileged: false)
 end
